syntax = "proto3";

option go_package = "/in_memory_blockchain";

package proto;

service Blockchain {
    rpc CreateTransaction (TxPayload) returns (Tx) {}
    rpc GetTransactions (QueryParams) returns (TxList) {}
    rpc GetBlock (QueryParams) returns (BlkList) {}
}

message QueryParams {
    optional string blk_hash = 1;
    optional string tx_hash = 2;
    optional int32 range = 3;
}

message TxPayload {
    string from = 1;
    string to = 2;
    double value = 3;
}

message Tx {
    string hash = 1;
    string from = 2;
    string to = 3;
    double value = 4;
}

message TxList {
    repeated Tx transactions = 1;
}

message Header {
    string hash = 1;
    string parent_hash = 2;
    int32 height = 3;
    repeated string tx_hashes = 4;
}

message Blk {
    Header header = 1;
    TxList tx_list =2;
}

message BlkList {
    repeated Blk blocks = 1;
}